--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
-
 # Godot-specific ignores
 .import/
 export.cfg
-export_presets.cfg
+# version this one, it contains the Export config with the version numbers
+# very convenient to Export on all platforms with right paths and names
+#export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
 
 # Mono-specific ignores
 .mono/
+data_*/
+
+# Export
+/Export/
