--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -33,7 +33,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="Export/v0.1.2/Windows/Flame of Hope Godot.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -75,7 +75,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="Export/v0.1.2/OSX/Flame of Hope Godot.zip"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -108,7 +108,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="Export/v0.1.2/HTML5/index.html"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
