[Export] Import and add icons for Windows and OSX everywhere (taskbar, app)

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -57,7 +57,7 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/modify_resources=true
-application/icon=""
+application/icon="res://icon.ico"
 application/file_version=""
 application/product_version=""
 application/company_name=""
@@ -85,7 +85,7 @@ custom_template/debug=""
 custom_template/release=""
 application/name=""
 application/info="Made with Godot Engine"
-application/icon=""
+application/icon="res://icon.icns"
 application/identifier="flame-of-hope.io.itch.fluentlystudios"
 application/signature=""
 application/app_category="Games"
